--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-3">EXPENSE TRACKER APP</h1>
-    <p class="lead">This app is for small business to manage their ledgers and keep track of their income.</p>
+    <p class="lead">This app is for small business like kirana or peer transaction to manage their ledgers and keep track of their income.</p>
   </div>
 </div>
 </br>
