--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-3">EXPENSE TRACKER APP</h1>
-    <p class="lead">This app is for small business like kirana or peer transaction to manage their ledgers and keep track of their income.</p>
+    <p class="lead">This app is for small business to manage their ledgers and keep track of their income.</p>
   </div>
 </div>
 </br>
@@ -31,39 +31,40 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
+      <td>Learning</td>
+      <td></td>
+      <td>Android</td>
+      <td></td>
+      <td></td>
+      <td>    Studio        </td>
+     
     </tr>
     <tr>
-      <th scope="row">2</th>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
+     <th scope="row">2</th>
+        <td>Learning</td>
+      <td></td>
+      <td>Android</td>
+      <td></td>
+      <td></td>
+      <td>    Studio        </td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
+      <td>Feedback</td>
+      <td>Transaction</td>
+      <td>Payment reminder</td>
+      <td>Transaction</td>
+      <td>Invoice </td>
+      <td>Sharing details</td>
     </tr>
     <tr>
       <th scope="row">4</th>
-     <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
+     <td>Coustomer complaint</td>
+      <td>Dashboard and Database</td>
+      <td>Side panel Options</td>
+      <td>Transaction</td>
+      <td>Account creation and user details</td>
+      <td>Account Signin with otp</td>
     </tr>
     <tr>
       <th scope="row">5</th>
