--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
   <tbody>
     <tr>
       <th scope="row">1</th>
+      <td>-------</td>
+      <td>------</td>
+      <td>=------</td>
+      <td>------</td>
+      <td>--------</td>
+      <td> ---------</td>
+     
+    </tr>
+    <tr>
+      <th scope="row">2</th>
       <td>Learning</td>
       <td></td>
       <td>Android</td>
@@ -40,7 +50,7 @@
      
     </tr>
     <tr>
-     <th scope="row">2</th>
+     <th scope="row">3</th>
         <td>Learning</td>
       <td></td>
       <td>Android</td>
@@ -49,32 +59,77 @@
       <td>    Studio        </td>
     </tr>
     <tr>
-      <th scope="row">3</th>
-      <td>Feedback</td>
-      <td>Transaction</td>
-      <td>Payment reminder</td>
-      <td>Transaction</td>
-      <td>Invoice </td>
-      <td>Sharing details</td>
-    </tr>
-    <tr>
       <th scope="row">4</th>
-     <td>Coustomer complaint</td>
-      <td>Dashboard and Database</td>
-      <td>Side panel Options</td>
-      <td>Transaction</td>
-      <td>Account creation and user details</td>
-      <td>Account Signin with otp</td>
+      <td>working on Feedback activity</td>
+      <td>Working on signup using mobile storage</td>
+      <td>Payment reminder</td>
+      <td>Working on firebase for payment</td>
+      <td>UI/UX </td>
+      <td>Working on signin using mobile storage</td>
     </tr>
     <tr>
       <th scope="row">5</th>
-     <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
-      <td>----------</td>
+     <td>___________</td>
+      <td>working on Firebase Database for user activity</td>
+      <td>working on Side panel Options</td>
+      <td>_______________________</td>
+      <td>____________________</td>
+      <td>working on Firebase Database for user activity</td>
     </tr>
+    <tr>
+      <th scope="row">5</th>
+      <td>Updating Feedback activity.</td>
+     <td>_______________</td>
+      <td>_______________</td>
+      <td>Working on Payment methods like pending , expense,etc</td>
+      <td>Working to make PDF file for paid , pending ,etc</td>
+      <td>_________________</td>
+    </tr>
+     <tr>
+      <th scope="row">6</th>
+      <td>_________________</td>
+     <td>_______________</td>
+      <td>_______________</td>
+      <td>Working on Payment methods like pending , expense,etc</td>
+      <td>__________________</td>
+      <td>_________________</td>
+    </tr>
+    <tr>
+      <th scope="row">7</th>
+      <td>_________________</td>
+     <td>_______________</td>
+      <td>Upadting sidebar option and attaching payment notifier with google calender or default calender.</td>
+      <td>_____________________</td>
+      <td>Working on Business card to share.</td>
+      <td>_________________</td>
+  </tr>
+  <tr>
+      <th scope="row">8</th>
+      <td>Feedback activity completed</td>
+     <td>Tailoring Features</td>
+      <td>Updating sidebar option and attaching payment notifier with google calender or default calender.</td>
+      <td>Transaction like expense , income , pending record.</td>
+      <td>Using firebase to login using phone number with otp</td>
+      <td>Tailoring Features</td>
+  </tr>
+  <tr>
+      <th scope="row">9</th>
+      <td>_________________</td>
+     <td>_______________</td>
+      <td>________________</td>
+      <td>Integrating each member work</td>
+      <td>Integrating each member work</td>
+      <td>_________________</td>
+  </tr>
+  <tr>
+      <th scope="row">Completed</th>
+      <td>_________________</td>
+     <td>_______________</td>
+      <td>________________</td>
+      <td>_______________</td>
+      <td>_______________</td>
+      <td>_________________</td>
+  </tr>
   </tbody>
 </table>
 </body>
