--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   </div>
 </div>
 </br>
-
+<div class="jumbotron">
+  
+  
 <table class="table table-dark table-striped">
   <thead>
     <tr>
@@ -132,5 +134,12 @@
   </tr>
   </tbody>
 </table>
+<p class="lead">We had tried multiple features but have excluded some of them as this will make the app usage more complex for small shop owners.</p>
+  <hr class="my-4">
+  <p>Also some features required specific api , sdk versions which can create problem on running on different devices.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="https://github.com/nick09k/Xpense" role="button">Xpense APP</a>
+  </p>
+</div>
 </body>
 </html>
